<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Background"
    tools:context=".NotificationsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_Loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#80000000"
        android:elevation="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/NavigationContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        style="@style/BackgroundImage"
        android:layout_width="600dp"
        android:layout_height="0dp"
        android:contentDescription="@string/Image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/NavigationContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            style="@style/HeaderContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_header"
            android:orientation="horizontal">

            <TextView
                style="@style/HeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notifications" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_Notifications"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/NavigationContainer"
        style="@style/NavContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/ll_Nav1"
            style="@style/NavItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tv_Nav1_Image"
                style="@style/NavImage"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:contentDescription="@string/Icon"
                android:src="@drawable/icon_nav1" />

            <TextView
                android:id="@+id/tv_Nav1_Text"
                style="@style/NavText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Nav1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_Nav2"
            style="@style/NavItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tv_Nav2_Image"
                style="@style/NavImage"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:contentDescription="@string/Icon"
                android:src="@drawable/icon_nav2" />

            <TextView
                android:id="@+id/tv_Nav2_Text"
                style="@style/NavText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Nav2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_Nav3"
            style="@style/NavItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tv_Nav3_Image"
                style="@style/ActiveNavImage"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:contentDescription="@string/Icon"
                android:src="@drawable/icon_nav3" />

            <TextView
                android:id="@+id/tv_Nav3_Text"
                style="@style/ActiveNavText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Nav3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_Nav4"
            style="@style/NavItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tv_Nav4_Image"
                style="@style/NavImage"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:contentDescription="@string/Icon"
                android:src="@drawable/icon_nav4" />

            <TextView
                android:id="@+id/tv_Nav4_Text"
                style="@style/NavText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Nav4" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>