<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransferActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_Loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#80000000"
        android:elevation="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            style="@style/HeaderContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_header"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_Back"
                style="@style/HeaderImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_back" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/FormItemContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/transfer_form"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="10dp"
                        android:text="@string/please_double_check_the_entered_amount_and_recipient_before_confirming_the_transfer" />

                </LinearLayout>

                <LinearLayout
                    style="@style/FormItemContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/FormTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/receiver_id" />

                    <EditText
                        android:id="@+id/et_ReceiverId"
                        style="@style/FormEditText"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:ems="10"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    style="@style/FormItemContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/FormTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/amount" />

                    <EditText
                        android:id="@+id/et_Amount"
                        style="@style/FormEditText"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:ems="10"
                        android:hint="0.00"
                        android:inputType="numberDecimal" />
                </LinearLayout>

                <LinearLayout
                    style="@style/FormItemContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/FormTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/message" />

                    <EditText
                        android:id="@+id/et_Message"
                        style="@style/FormEditText"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:ems="10"
                        android:hint="optional"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    style="@style/FormItemContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_TransferBtn"
                        style="@style/FormTextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/transfer" />

                </LinearLayout>


            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>