<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecuritySettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_Loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#80000000"
        android:elevation="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView2"
        style="@style/BackgroundImage"
        android:layout_width="600dp"
        android:layout_height="0dp"
        android:contentDescription="@string/Image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            style="@style/HeaderContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_header"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_Back"
                style="@style/HeaderImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_back" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    style="@style/FormItemContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Security Settings"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="5dp"
                        android:text="@string/SecuritySettingsInfo1"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="@+id/textView8"
                        app:layout_constraintStart_toStartOf="@+id/textView8"
                        app:layout_constraintTop_toBottomOf="@+id/textView8" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:lineSpacingExtra="5dp"
                        android:text="@string/SecuritySettingsInfo2"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="@+id/textView15"
                        app:layout_constraintStart_toStartOf="@+id/textView15"
                        app:layout_constraintTop_toBottomOf="@+id/textView15" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/SecuritySettingsInfo3"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/textView16"
                        app:layout_constraintStart_toStartOf="@+id/textView16"
                        app:layout_constraintTop_toBottomOf="@+id/textView16" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    style="@style/FormItemContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/FormTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/old_pin_code" />

                    <EditText
                        android:id="@+id/et_OldPinCode"
                        style="@style/FormEditText"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:ems="10"
                        android:inputType="numberPassword"
                        android:maxLength="6"
                        android:hint="Old 6 digit PIN"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    style="@style/FormItemContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/FormTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/new_pin_code" />

                    <EditText
                        android:id="@+id/et_NewPinCode"
                        style="@style/FormEditText"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:ems="10"
                        android:inputType="numberPassword"
                        android:maxLength="6"
                        android:hint="New 6 digit PIN"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    style="@style/FormItemContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/FormTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/re_type_new_pin_code" />

                    <EditText
                        android:id="@+id/et_ReNewPinCode"
                        style="@style/FormEditText"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:ems="10"
                        android:inputType="numberPassword"
                        android:maxLength="6"
                        android:hint="New 6 digit PIN"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    style="@style/FormItemContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_ChangePinBtn"
                        style="@style/FormTextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Change PIN code" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>